src/iodbc_sql.h

#define SQL_CHAR                1
#define SQL_NUMERIC             2
#define SQL_DECIMAL             3
#define SQL_INTEGER             4
#define SQL_SMALLINT                5
#define SQL_FLOAT               6
#define SQL_REAL                7
#define SQL_DOUBLE              8
#define SQL_VARCHAR             12
#define SQL_TYPE_DATE               91
#define SQL_TYPE_TIME               92
#define SQL_TYPE_TIMESTAMP          93
/*
 *  NULL status constants
 */
#define SQL_NO_NULLS                0
#define SQL_NULLABLE                1
#define SQL_NULLABLE_UNKNOWN            2
/*
 *  SQLSpecialColumns - Column scopes
 */
#define SQL_SCOPE_CURROW            0
#define SQL_SCOPE_TRANSACTION           1
#define SQL_SCOPE_SESSION           2
/*
 *  SQLStatistics - fUnique
 */
#define SQL_INDEX_UNIQUE            0
#define SQL_INDEX_ALL               1
/*
 *  SQLStatistics - TYPE
 */
#define SQL_INDEX_CLUSTERED         1
#define SQL_INDEX_HASHED            2
#define SQL_INDEX_OTHER             3
SQLRETURN SQL_API SQLColumns (
    SQLHSTMT          StatementHandle,
    SQLCHAR     * CatalogName,
    SQLSMALLINT       NameLength1,
    SQLCHAR     * SchemaName,
    SQLSMALLINT       NameLength2,
    SQLCHAR     * TableName,
    SQLSMALLINT       NameLength3,
    SQLCHAR     * ColumnName,
    SQLSMALLINT       NameLength4);
SQLRETURN SQL_API SQLGetDiagField (
    SQLSMALLINT       HandleType,
    SQLHANDLE         Handle,
    SQLSMALLINT       RecNumber,
    SQLSMALLINT       DiagIdentifier,
    SQLPOINTER        DiagInfo,
    SQLSMALLINT       BufferLength,
    SQLSMALLINT     * StringLength);
SQLRETURN SQL_API SQLGetDiagRec (
    SQLSMALLINT       HandleType,
    SQLHANDLE         Handle,
    SQLSMALLINT       RecNumber,
    SQLCHAR     * Sqlstate,
    SQLINTEGER      * NativeError,
    SQLCHAR     * MessageText,
    SQLSMALLINT       BufferLength,
    SQLSMALLINT     * TextLength);
SQLRETURN SQL_API SQLSpecialColumns (
    SQLHSTMT          StatementHandle,
    SQLUSMALLINT      IdentifierType,
    SQLCHAR     * CatalogName,
    SQLSMALLINT       NameLength1,
    SQLCHAR     * SchemaName,
    SQLSMALLINT       NameLength2,
    SQLCHAR     * TableName,
    SQLSMALLINT       NameLength3,
    SQLUSMALLINT      Scope,
    SQLUSMALLINT      Nullable);
SQLRETURN SQL_API SQLStatistics (
    SQLHSTMT          StatementHandle,
    SQLCHAR     * CatalogName,
    SQLSMALLINT       NameLength1,
    SQLCHAR     * SchemaName,
    SQLSMALLINT       NameLength2,
    SQLCHAR     * TableName,
    SQLSMALLINT       NameLength3,
    SQLUSMALLINT      Unique,
    SQLUSMALLINT      Reserved);
SQLRETURN SQL_API SQLTables (
    SQLHSTMT          StatementHandle,
    SQLCHAR     * CatalogName,
    SQLSMALLINT       NameLength1,
    SQLCHAR     * SchemaName,
    SQLSMALLINT       NameLength2,
    SQLCHAR     * TableName,
    SQLSMALLINT       NameLength3,
    SQLCHAR     * TableType,
    SQLSMALLINT       NameLength4);