src/iodbc_sqlext.h

#define SQL_LONGVARCHAR             (-1)
#define SQL_BINARY              (-2)
#define SQL_VARBINARY               (-3)
#define SQL_LONGVARBINARY           (-4)
#define SQL_BIGINT              (-5)
#define SQL_TINYINT             (-6)
#define SQL_BIT                 (-7)
/*
 *  C datatype to SQL datatype mapping
 */
#define SQL_C_CHAR                  SQL_CHAR
#define SQL_C_LONG                  SQL_INTEGER
#define SQL_C_SHORT                 SQL_SMALLINT
#define SQL_C_FLOAT                 SQL_REAL
#define SQL_C_DOUBLE                SQL_DOUBLE
#define SQL_C_TINYINT               SQL_TINYINT
/*
 *  SQLSpecialColumns - Column types and scopes
 */
#define SQL_BEST_ROWID              1
#define SQL_ROWVER              2
/*
 *  SQLStatistics - fAccuracy
 */
#define SQL_QUICK               0
#define SQL_ENSURE              1
SQLRETURN SQL_API SQLColumnPrivileges (
    SQLHSTMT          hstmt,
    SQLCHAR     * szCatalogName,
    SQLSMALLINT       cbCatalogName,
    SQLCHAR     * szSchemaName,
    SQLSMALLINT       cbSchemaName,
    SQLCHAR     * szTableName,
    SQLSMALLINT       cbTableName,
    SQLCHAR     * szColumnName,
    SQLSMALLINT       cbColumnName);
SQLRETURN SQL_API SQLForeignKeys (
    SQLHSTMT          hstmt,
    SQLCHAR     * szPkCatalogName,
    SQLSMALLINT       cbPkCatalogName,
    SQLCHAR     * szPkSchemaName,
    SQLSMALLINT       cbPkSchemaName,
    SQLCHAR     * szPkTableName,
    SQLSMALLINT       cbPkTableName,
    SQLCHAR     * szFkCatalogName,
    SQLSMALLINT       cbFkCatalogName,
    SQLCHAR     * szFkSchemaName,
    SQLSMALLINT       cbFkSchemaName,
    SQLCHAR     * szFkTableName,
    SQLSMALLINT       cbFkTableName);
SQLRETURN SQL_API SQLPrimaryKeys (
    SQLHSTMT          hstmt,
    SQLCHAR     * szCatalogName,
    SQLSMALLINT       cbCatalogName,
    SQLCHAR     * szSchemaName,
    SQLSMALLINT       cbSchemaName,
    SQLCHAR     * szTableName,
    SQLSMALLINT       cbTableName);
SQLRETURN SQL_API SQLProcedureColumns (
    SQLHSTMT          hstmt,
    SQLCHAR     * szCatalogName,
    SQLSMALLINT       cbCatalogName,
    SQLCHAR     * szSchemaName,
    SQLSMALLINT       cbSchemaName,
    SQLCHAR     * szProcName,
    SQLSMALLINT       cbProcName,
    SQLCHAR     * szColumnName,
    SQLSMALLINT       cbColumnName);
SQLRETURN SQL_API SQLProcedures (
    SQLHSTMT          hstmt,
    SQLCHAR     * szCatalogName,
    SQLSMALLINT       cbCatalogName,
    SQLCHAR     * szSchemaName,
    SQLSMALLINT       cbSchemaName,
    SQLCHAR     * szProcName,
    SQLSMALLINT       cbProcName);
SQLRETURN SQL_API SQLTablePrivileges (
    SQLHSTMT          hstmt,
    SQLCHAR     * szCatalogName,
    SQLSMALLINT       cbCatalogName,
    SQLCHAR     * szSchemaName,
    SQLSMALLINT       cbSchemaName,
    SQLCHAR     * szTableName,
    SQLSMALLINT       cbTableName);