src/ODBC_API.jl


###################################################		DBMS Meta Functions	####################################################################################################
#http://msdn.microsoft.com/en-us/library/windows/desktop/ms711683(v=vs.85).aspx
function SQLColumns(stmt::Ptr{Void},catalog::String,schema::String,table::String,column::String)
	return ccall( (:SQLColumnPrivileges, odbc_dm), stdcall,
		Int16, (Ptr{Void},Ptr{Uint8},Int16,Ptr{Uint8},Int16,Ptr{Uint8},Int16,Ptr{Uint8},Int16),
		stmt,catalog,length(catalog),schema,length(schema),table,length(table),column,length(column))
end
#http://msdn.microsoft.com/en-us/library/windows/desktop/ms716336(v=vs.85).aspx
function SQLColumnPrivileges(stmt::Ptr{Void},catalog::String,schema::String,table::String,column::String)
	return ccall( (:SQLColumnPrivileges, odbc_dm), stdcall,
		Int16, (Ptr{Void},Ptr{Uint8},Int16,Ptr{Uint8},Int16,Ptr{Uint8},Int16,Ptr{Uint8},Int16),
		stmt,catalog,length(catalog),schema,length(schema),table,length(table),column,length(column))
end
#http://msdn.microsoft.com/en-us/library/windows/desktop/ms709315(v=vs.85).aspx
function SQLForeignKeys(stmt::Ptr{Void},pkcatalog::String,pkschema::String,pktable::String,fkcatalog::String,fkschema::String,fktable::String)
	return ccall( (:SQLForeignKeys, odbc_dm), stdcall,
		Int16, (Ptr{Void},Ptr{Uint8},Int16,Ptr{Uint8},Int16,Ptr{Uint8},Int16,Ptr{Uint8},Int16,Ptr{Uint8},Int16,Ptr{Uint8},Int16),
		stmt,pkcatalog,length(pkcatalog),pkschema,length(pkschema),pktable,length(pktable),fkcatalog,length(fkcatalog),fkschema,length(fkschema),fktable,length(fktable))
end
#http://msdn.microsoft.com/en-us/library/windows/desktop/ms711005(v=vs.85).aspx
function SQLPrimaryKeys(stmt::Ptr{Void},catalog::String,schema::String,table::String)
	return ccall( (:SQLPrimaryKeys, odbc_dm), stdcall,
		Int16, (Ptr{Void},Ptr{Uint8},Int16,Ptr{Uint8},Int16,Ptr{Uint8},Int16),
		stmt,catalog,length(catalog),schema,length(schema),table,length(table))
end
#http://msdn.microsoft.com/en-us/library/windows/desktop/ms711701(v=vs.85).aspx
function SQLProcedureColumns(stmt::Ptr{Void},catalog::String,schema::String,proc::String,column::String)
	return ccall( (:SQLProcedureColumns, odbc_dm), stdcall,
		Int16, (Ptr{Void},Ptr{Uint8},Int16,Ptr{Uint8},Int16,Ptr{Uint8},Int16,Ptr{Uint8},Int16),
		stmt,catalog,length(catalog),schema,length(schema),proc,length(proc),column,length(column))
end
#http://msdn.microsoft.com/en-us/library/windows/desktop/ms715368(v=vs.85).aspx
function SQLProcedures(stmt::Ptr{Void},catalog::String,schema::String,proc::String)
	return ccall( (:SQLProcedures, odbc_dm), stdcall,
		Int16, (Ptr{Void},Ptr{Uint8},Int16,Ptr{Uint8},Int16,Ptr{Uint8},Int16),
		stmt,catalog,length(catalog),schema,length(schema),proc,length(proc))
end
#http://msdn.microsoft.com/en-us/library/windows/desktop/ms711831(v=vs.85).aspx
function SQLTables(stmt::Ptr{Void},catalog::String,schema::String,table::String,table_type::String)
	return ccall( (:SQLTables, odbc_dm), stdcall,
		Int16, (Ptr{Void},Ptr{Uint8},Int16,Ptr{Uint8},Int16,Ptr{Uint8},Int16,Ptr{Uint8},Int16),
		stmt,catalog,length(catalog),schema,length(schema),table,length(table),table_type,length(table_type))
end
#http://msdn.microsoft.com/en-us/library/windows/desktop/ms713565(v=vs.85).aspx
function SQLTablePrivileges(stmt::Ptr{Void},catalog::String,schema::String,table::String)
	return ccall( (:SQLTablePrivileges, odbc_dm), stdcall,
		Int16, (Ptr{Void},Ptr{Uint8},Int16,Ptr{Uint8},Int16,Ptr{Uint8},Int16),
		stmt,catalog,length(catalog),schema,length(schema),table,length(table))
end
#SQLStatistics
 #http://msdn.microsoft.com/en-us/library/windows/desktop/ms711022(v=vs.85).aspx
 #Description:
 #valid unique
	const SQL_INDEX_ALL = uint16(1) #SQLStatistics
	const SQL_INDEX_CLUSTERED = uint16(1) #SQLStatistics
	const SQL_INDEX_HASHED = uint16(2) #SQLStatistics
	const SQL_INDEX_OTHER = uint16(3) #SQLStatistics
	const SQL_INDEX_UNIQUE = uint16(0) #SQLStatistics
 #valid reserved
	const SQL_ENSURE = uint16(1) #SQLStatistics
	const SQL_QUICK = uint16(0) #SQLStatistics
 #Status:
function SQLStatistics(stmt::Ptr{Void},catalog::String,schema::String,table::String,unique::Uint16,reserved::Uint16)
	return ccall( (:SQLStatistics, odbc_dm), stdcall,
		Int16, (Ptr{Void},Ptr{Uint8},Int16,Ptr{Uint8},Int16,Ptr{Uint8},Int16,Uint16,Uint16),
		stmt,catalog,length(catalog),schema,length(schema),table,length(table),unique,reserved)
end
#SQLSpecialColumns
 #http://msdn.microsoft.com/en-us/library/windows/desktop/ms714602(v=vs.85).aspx
 #Description:
 #valid id_type
	const SQL_BEST_ROWID = int16(1) #SQLSpecialColumns
	const SQL_ROWVER = int16(2) #SQLSpecialColumns
 #valid scope
	const SQL_SCOPE_CURROW = int16(0) #SQLSpecialColumns
	const SQL_SCOPE_SESSION = int16(2) #SQLSpecialColumns
	const SQL_SCOPE_TRANSACTION = int16(1) #SQLSpecialColumns
 #valid nullable
	const SQL_NO_NULLS = int16(0) #SQLSpecialColumns
	const SQL_NULLABLE = int16(1) #SQLSpecialColumns
	#const SQL_NULLABLE_UNKNOWN = int16() #SQLSpecialColumns
 #Status:
function SQLSpecialColumns(stmt::Ptr{Void},id_type::Int16,catalog::String,schema::String,table::String,scope::Int16,nullable::Int16)
	return ccall( (:SQLSpecialColumns, odbc_dm), stdcall,
		Int16, (Ptr{Void},Int16,Ptr{Uint8},Int16,Ptr{Uint8},Int16,Ptr{Uint8},Int16,Int16,Int16),
		stmt,id_type,catalog,length(catalog),schema,length(schema),table,length(table),scope,nullable)
end
###################################################		Error Handling Functions	####################################################################################################
#TODO: add consts 
#http://msdn.microsoft.com/en-us/library/windows/desktop/ms710181(v=vs.85).aspx
function SQLGetDiagField(handletype::Int16,handle::Ptr{Void},i::Int16,diag_id::Int16,diag_info::Array{Uint,1},buffer_length::Int16,diag_length::Array{Int16,1})
	return ccall( (:SQLGetDiagField, odbc_dm), stdcall, 
		Int16, (Int16,Ptr{Void},Int16,Int16,Ptr{Uint8},Int16,Ptr{Int16}),
		handletype,handle,i,diag_id,diag_info,buffer_length,msg_length)
end
#http://msdn.microsoft.com/en-us/library/windows/desktop/ms716256(v=vs.85).aspx
function SQLGetDiagRec(handletype::Int16,handle::Ptr{Void},i::Int16,state::Array{Uint8,1},native::Array{Int,1},error_msg::Array{Uint8,1},msg_length::Array{Int16,1})
	return ccall( (:SQLGetDiagRec, odbc_dm), stdcall, 
		Int16, (Int16,Ptr{Void},Int16,Ptr{Uint8},Ptr{Int},Ptr{Uint8},Int16,Ptr{Int16}),
		handletype,handle,i,state,native,error_msg,length(error_msg),msg_length)
end

###################################################		SQL - C - Julia Data Type Mappings	####################################################################################################
#SQL Data Types; C Data Types; Julia Types
#(*Note: SQL data types are returned in resultset metadata calls, and C data types are accepted by the DBMS for conversion)
#Data Type Status: Pretty good, I think we're at 95% support, really only missing native DATE, TIME, GUID. I think there are some other Time Interval types too.
#The other thing I haven't tested/played around with is Unicode support, I think we're reading it in right, but I'm not sure.
const SQL_TINYINT = const SQL_C_TINYINT = int16(-6); #Int8
const SQL_SMALLINT = int16(5); #Int16
const SQL_C_SHORT = int16(-15) #Int16
const SQL_INTEGER = int16(4); #Int32
const SQL_C_LONG = int16(-16) #Int32
const SQL_REAL = int16(7); #Int32
const SQL_BIGINT = int16(-5); #Int64
const SQL_C_BIGINT = int16(-27); #Int64
#I originally thought of trying to reduce the float types to Ints if the metadata returned 0 column digits, but several drivers don't accurately return the decimal_digits of a column
#so Float64 is the default so no precision is lost
#An idea is to have DataFrames type inference support to reduce all these types to their smallest accurate representation when they are plugged into the DataFrame
#I believe R does something to this affect (though its type system is a completely different animal)
const SQL_DECIMAL = int16(3); #Float64
const SQL_NUMERIC = int16(2); #Float64
const SQL_FLOAT = int16(6); #Float64
const SQL_C_FLOAT = int16(7); #Float64
const SQL_DOUBLE = const SQL_C_DOUBLE = int16(8); #Float64

const SQL_CHAR = const SQL_C_CHAR = int16(1); #SQL and C data type for Uint8
const SQL_VARCHAR = int16(12); #Uint8
const SQL_LONGVARCHAR = int16(-1); #Uint8
const SQL_WCHAR = int16(-8); #Uint8
const SQL_WVARCHAR = int16(-9); #Uint8
const SQL_WLONGVARCHAR = int16(-10); #Uint8

const SQL_BIT = int16(-7); #Int8 - Will be 0 or 1
const SQL_BINARY = int16(-2); #Uint8 (should leave as-is once retrieved?)
const SQL_VARBINARY = int16(-3); #Uint8 (should leave as-is once retrieved?)
const SQL_LONGVARBINARY = int16(-4); #Uint8 (should leave as-is once retrieved?)

#For now, all other types are just interpreted as SQL_C_CHAR, Uint8 bytestrings
#const SQL_TYPE_DATE = 91 
#const SQL_TYPE_TIME = 92
#const SQL_TYPE_TIMESTAMP = 93
const SQL_TYPES = [-6=>"SQL_TINYINT",5=>"SQL_SMALLINT",4=>"SQL_INTEGER",7=>"SQL_REAL",-5=>"SQL_BIGINT",3=>"SQL_DECIMAL",2=>"SQL_NUMERIC",6=>"SQL_FLOAT",8=>"SQL_DOUBLE",1=>"SQL_CHAR",12=>"SQL_VARCHAR",
-1=>"SQL_LONGVARCHAR",-8=>"SQL_WCHAR",-9=>"SQL_WVARCHAR",-10=>"SQL_WLONGVARCHAR",-7=>"SQL_BIT",-2=>"SQL_BINARY",-3=>"SQL_VARBINARY",-4=>"SQL_LONGVARBINARY",91=>"SQL_TYPE_DATE",92=>"SQL_TYPE_TIME",93=>"SQL_TYPE_TIMESTAMP"]